--- a/bootstrap/css/custom.css
+++ b/bootstrap/css/custom.css
@@ -1,23 +1,52 @@
-.breadcrumb > li + li:before {
-  padding: 0 5px;
-  color: #ccc;
-  content: none;
+/* Custom styling for the Bootstrap website. 
+These styles do not ship with Bootstrap. 
+Some are overrides of existing Bootstrap styles, while others are new styles not existing in Bootstrap.
+In the starting CSS document, styles are based on custom classes not in Bootstrap.
+*/
+
+/* below styles are the default -- take effect at resolutions <768 px */
+.logo {
+	text-align: center;
 }
-body{
-	padding-top:70px;
+.tagline {
+	color: #602F8D;
+	font-family: Georgia, serif;
+	font-style: italic;
+	font-size: 1.5em;
+	text-align: center;
+	padding-top: 1em;
 }
-.navbar-inverse .navbar-toggle {
-	color: white;
-	font-weight: bold;
-	border-color: white;
+
+/* footer styling for all resolutions */
+
+.siteinfo {
+	text-align: center;
+	padding: 3em 0;
+	border-top: 1px solid #ddd;
 }
-.navbar-inverse .navbar-toggle:hover {
-	background-color: #ddd;
-	color: #333;
+.siteinfo a {
+	text-decoration: none;
+	color: #999;
+	font-size: 0.8em;
 }
-.navbar-inverse .navbar-toggle .glyphicon {
-	color: white;
+.siteinfo a:hover {
+	color: #602F8D;
+	text-decoration: underline;
 }
-.navbar-inverse .navbar-toggle:hover .glyphicon {
-	color: #333;
+
+/* Small devices (tablets, 768px and up) 
+
+Greater than 768 px, push logo left and tagline right. Alter 
+tagline font size, alignment, and padding for larger dimensions.
+
+*/
+@media (min-width: 768px) {  
+	.logo {
+		text-align: left;
+	}
+	.tagline {
+		font-size: 2em;
+		text-align: right;
+		padding-top: 1.6em;
+	}
 }
